# PM-JPL

./: README.md  check_input_distribution.py  makefile  pyproject.toml  test_generate_PMJPL_inputs.py
.github/workflows/: ci.yml
MOD16/: MOD16.py
PMJPL/: ECOv002-cal-val-PM-JPL-inputs.csv  ECOv002-cal-val-PM-JPL-outputs.csv  ECOv002-static-tower-PM-JPL-inputs.csv  PMJPL.py  PMJPL_parameter_from_IGBP.py  calculate_gamma.py  canopy_conductance.py  closed_minimum_temperature.py  closed_vapor_pressure_deficit.py  constants.py  generate_PMJPL_GEOS5FP_inputs.py  get_CL.py  get_RBL_max.py  get_RBL_min.py  get_VPD_close.py  get_VPD_open.py  get_gl_e_wv.py  get_tmin_close.py  get_tmin_open.py  maximum_boundary_layer_resistance.py  minimum_boundary_layer_resistance.py  model.py  open_minimum_temperature.py  open_vapor_pressure_deficit.py  parameters.py  potential_stomatal_conductance.py  process_PMJPL_table.py  process_daily_ET_table.py  version.py
PMJPL/vegetation_conversion/: fractional_vegetation_cover.py  leaf_area_index.py  vegetation_conversion.py
notebooks/: Minimum Temperature.ipynb  PM-JPL Sensitivity with ECOv002 Cal-Val.ipynb  Tower Input Data for PM-JPL from ECOSTRESS Collection 2 Cal-Val copy.ipynb  Tower Input Data for PM-JPL from ECOSTRESS Collection 2 Cal-Val.ipynb  Tower Static Input Data for PM-JPL from ECOSTRESS Collection 2 Cal-Val.ipynb
tests/: test_import_MOD16.py  test_import_MOD16_JPL.py
