[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "MOD16"
version = "1.0.0"
description = "MOD16 evapotranspiration algorithm for high resolution instantaneous remote sensing imagery"
readme = "README.md"
authors = [
    { name = "Gregory Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
    { name = "Qiaozhen Mu", email = "qiaozhen@ntsg.umt.edu" },
    { name = "Maosheng Zhao", email = "zhao@ntsg.umt.edu." },
    { name = "Steven W. Running", email = "swr@ntsg.umt.edu" },
    { name = "Claire S. Villanueva-Weeks, email = "claire.s.villanueva-weeks@jpl.gov" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pillow",
    "keras", 
    "geopandas",
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "pygeos",
    "pyproj",
    "rasterio",
    "requests", 
    "shapely",
    "scikit-image",  # Corrected package name
    "affine",
    "astropy",
    "pyresample",
    "scipy",
    "six",
    "urllib3",
]
requires-python = ">=3.10"

[project.optional-dependencies]
macos = [
    "pykdtree @ git+https://github.com/storpipfugl/pykdtree.git",
]